# faro-api

./: .gitignore  MANIFEST  README.md  README.rst  apiconfig.py  conflictme  myfile  pip-requirements.txt  rakefile  run.py  run_auth.py  service-setup.sh  setup.cfg  test-requirements.txt  tox.ini
faro/: service.py
faro/api/: api.py  common.py
faro/api/v1/: __init__.py  event.py
faro/db/: database.py  models.py
faro_api/: __init__.py  database.py  models.py  utils.py
faro_api/exceptions/: common.py
faro_api/middleware/: versionrouter.py
faro_api/middleware/auth/: auth_common.py  authtest.py  noauth.py
faro_api/models/: __init__.py  action.py  base_models.py  dataprovider.py  event.py  item.py  question.py  role.py  template.py  token.py  user.py
faro_api/tests/: test_admin_auth.py  test_dataproviders.py  test_events.py  test_events_and_users.py  test_jsonp.py  test_login.py  test_ownership_auth.py  test_pagesize.py  test_paging.py  test_questions.py  test_templates.py  test_users.py  test_utils.py
faro_api/views/: common.py  dataproviders.py  endpoint.py  events.py  questions.py  roles.py  templates.py  tokens.py  users.py
faro_auth/: __init__.py
gunicorn/: conf.py
requirements/: pip-requirements.txt
scripts/: service-database-sync.sh  service-start.sh
scripts/hooks/: pre-commit
