[metadata]
name = faro-api
author = WakeMakin Development House L.L.C.
author-email = ridley@wakemakin.com
summary = A service node for Project Faro
description-file = README.rst
license = Private
home-page = http://github.com/Wakemakin/faro-api
classifier = 
    Development Status :: 2 - Pre-Alpha
        Environment :: Console
        Intended Audience :: Developers
        Operating System :: OS Independent
        Programming Language :: Python


[files]
packages = 
    faro_api


[hooks]
setup-hooks = 
    pbr.hooks.setup_hook
